style: global css overflow fix.

--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  width: 100vw;
-  height: 100vh;
-  padding: 0;
-  margin: 0;
+  padding: 0px;
+  margin: 0px;
   box-sizing: border-box;
 }
 
@@ -29,14 +27,16 @@ a:hover {
 }
 
 body {
-  width: 100vw;
-  height: 100vh;
-  padding: 0;
-  margin: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 #root {
-  width: 100vw;
-  height: 100vh;
+  width: inherit;
+  height: inherit;
   padding: 0;
   margin: 0;
 }
